--- a/Angular-Front/src/app/AziendaEnviroments/azienda-details/azienda-details.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda-details/azienda-details.component.html
@@ -46,6 +46,6 @@
 
 <div class="m-5 row">
   <div class="col-6">
-    <app-cliente ></app-cliente>
+    <app-cliente [idaz]="aziendaId" ></app-cliente>
   </div>
 </div>
