--- a/Angular-Front/src/app/ClienteEnviroments/cliente/cliente.component.html
+++ b/Angular-Front/src/app/ClienteEnviroments/cliente/cliente.component.html
@@ -33,6 +33,6 @@
     </tbody>
   </table><br>
 
-  <button type="button" class="btn btn-dark" (click)="addCustomers()" routerLink="/addCliente">Aggiungi</button>
+  <button type="button" class="btn btn-dark" routerLink="/addCliente/{{idaz}}">Aggiungi</button>
 </div>
 
