--- a/Angular-Front/src/app/ClienteEnviroments/cliente/cliente.component.html
+++ b/Angular-Front/src/app/ClienteEnviroments/cliente/cliente.component.html
@@ -29,10 +29,13 @@
         <td>{{c.pec}}</td>
         <td>{{c.fax}}</td>
         <td *ngIf="numeroCommesse">{{numeroCommesse}}</td>
+        <button type="button" class="btn btn-dark" routerLink="/updateCliente/{{c.id_cliente}}" >Modifica</button>
       </tr>
+
     </tbody>
   </table><br>
 
   <button type="button" class="btn btn-dark" routerLink="/addCliente/{{idaz}}">Aggiungi</button>
+  
 </div>
 
