--- a/Angular-Front/src/app/ClienteEnviroments/cliente/cliente.component.html
+++ b/Angular-Front/src/app/ClienteEnviroments/cliente/cliente.component.html
@@ -29,7 +29,8 @@
         <td>{{c.pec}}</td>
         <td>{{c.fax}}</td>
         <td *ngIf="numeroCommesse">{{numeroCommesse}}</td>
-        <button type="button" class="btn btn-dark" routerLink="/updateCliente/{{c.id_cliente}}" >Modifica</button>
+        <button type="button" class="btn bg-dark text-white" routerLink="/updateCliente/{{c.id_cliente}}" >Modifica</button>
+        <button type="button" class="btn bg-dark text-white" routerLink="/detailsCliente/{{c.id_cliente}}" >Dettagli</button>
       </tr>
 
     </tbody>
