fatto la parte delle commesse, bisogna fixare una cosa sulla add commessa

--- a/Angular-Front/src/app/ClienteEnviroments/cliente/cliente.component.html
+++ b/Angular-Front/src/app/ClienteEnviroments/cliente/cliente.component.html
@@ -30,7 +30,7 @@
         <td>{{c.fax}}</td>
         <td *ngIf="numeroCommesse">{{numeroCommesse}}</td>
         <button type="button" class="btn bg-dark text-white" routerLink="/updateCliente/{{c.id_cliente}}" >Modifica</button>
-        <button type="button" class="btn bg-dark text-white" routerLink="/detailsCliente/{{c.id_cliente}}" >Dettagli</button>
+        <button type="button" class="btn bg-dark text-white" routerLink="/clienteCommessa/{{c.id_cliente}}" >Dettagli</button>
       </tr>
 
     </tbody>
