delete commessa fatta

--- a/Angular-Front/src/app/ClienteEnviroments/commesse/commesse.component.html
+++ b/Angular-Front/src/app/ClienteEnviroments/commesse/commesse.component.html
@@ -60,6 +60,7 @@
   </table><br>
   <div>
     <button class="btn btn-dark m-2" routerLink="/commessaUpdate/{{c.id_commessa}}">Modifica</button>    
+    <button class="btn btn-dark m-2" (click)="deleteCommessa(c.id_commessa)">Elimina</button>    
 </div>
  
 </div>
