--- a/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
@@ -15,28 +15,55 @@
 </div> -->
 
 <div class="container">
-
-    <!-- Page Heading -->
-    <h1 class="my-4">Lista Aziende
-      <small></small>
-    </h1>
-
-    <!-- Project One -->
-    <div class="row" *ngFor="let e of aziende | async">
-      <div class="col-md-7" >
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="{{image}}" alt="">
-        </a>
-      </div>
-      <div class="col md-5" >
-        <h3>{{e.nome}}</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore,
-          voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-        <button class="btn btn-dark" routerLink='aziendaDetails/{{e.id_azienda}}'>Info</button>
-      </div>
+  <!-- Page Heading -->
+  <h1 class="my-4">
+    Lista Aziende
+    <small></small>
+  </h1>
+  <!-- SearchBar -->
+  <nav class="navbar bg-light my-5 rounded-2">
+    <div class="container-fluid">
+      <a class="navbar-brand">Cerca Dipendente</a>
+      <form class="d-flex" role="search">
+        <input
+          (keydown.enter)="search(valoreRicerca)"
+          class="form-control me-2"
+          type="search"
+          placeholder="Cerca dipendente..."
+          aria-label="Cerca dipendente..."
+          #valoreRicerca
+        />
+        <button class="btn btn-outline-dark" (click)="search(valoreRicerca)">
+          Cerca!
+        </button>
+      </form>
     </div>
-    <!-- /.row -->
-    
-    <hr>
-    <button class="btn btn-dark" routerLink='addAzienda'>Aggiungi Azienda</button>
+  </nav>
+  <!-- Project One -->
+  <div class="row" *ngFor="let e of aziende | async">
+    <div class="col-md-7">
+      <a href="#">
+        <img class="img-fluid rounded mb-3 mb-md-0" src="{{ image }}" alt="" />
+      </a>
+    </div>
+    <div class="col md-5">
+      <h3>{{ e.nome }}</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium
+        veniam exercitationem expedita laborum at voluptate. Labore, voluptates
+        totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque
+        eveniet unde.
+      </p>
+      <button
+        class="btn btn-dark"
+        routerLink="aziendaDetails/{{ e.id_azienda }}"
+      >
+        Info
+      </button>
+    </div>
+  </div>
+  <!-- /.row -->
+
+  <hr />
+  <button class="btn btn-dark" routerLink="addAzienda">Aggiungi Azienda</button>
 </div>
