fixed input binding for live reseach

--- a/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
@@ -28,9 +28,10 @@
         <input
           class="form-control me-2"
           type="search"
-          placeholder="Cognome "
+          placeholder="Inizia a digitare..."
           aria-label="Cerca dipendente per nome"
           #valoreDipendente
+          (input)="searchAll(valoreDipendente)"
         />
         <button
           class="btn btn-outline-dark"
