aggiunto barra errore

--- a/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
@@ -43,6 +43,9 @@
     </div>
   </nav>
   <!-- Search Results -->
+  <div class="alert alert-warning" *ngIf="errore" role="alert">
+    La ricerca non ha prodotto risultati.
+  </div>
   <div *ngIf="is_display">
     <h2 class="text-dark">Dipendenti</h2>
     <div>
