aggiunto feature carina

--- a/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
@@ -43,8 +43,9 @@
     </div>
   </nav>
   <!-- Search Results -->
-  <div class="alert alert-warning" *ngIf="errore" role="alert">
-    La ricerca non ha prodotto risultati.
+  <div class="alert alert-warning alert-dismissible fade show" *ngIf="errore" role="alert">
+    <strong>Attenzione!</strong> La ricerca non ha prodotto risultati.
+    <button type="button" class="btn-close" data-bs-dismiss="alert" (click)="chiudi()"></button>
   </div>
   <div *ngIf="is_display">
     <h2 class="text-dark">Dipendenti</h2>
