--- a/Angular-Front/src/app/ClienteEnviroments/cliente/cliente.component.html
+++ b/Angular-Front/src/app/ClienteEnviroments/cliente/cliente.component.html
@@ -32,6 +32,7 @@
         <button type="button" class="btn bg-dark text-white" routerLink="/updateCliente/{{c.id_cliente}}" >Modifica</button>
         <button type="button" class="btn bg-dark text-white" routerLink="/clienteCommessa/{{c.id_cliente}}" >Dettagli</button>
       </tr>
+      <button type="button" class="btn bg-dark text-white" (click)="downloadFile()" >CSV</button>
 
     </tbody>
   </table><br>
