--- a/Angular-Front/src/app/DipendenteEnviroments/dipendente/dipendente.component.html
+++ b/Angular-Front/src/app/DipendenteEnviroments/dipendente/dipendente.component.html
@@ -30,6 +30,6 @@
       </tr>
     </tbody>
   </table><br>
-  <button  class="btn bg-dark text-white m-2" (click)="downloadFile()">Modifica</button>
+  <button  class="btn bg-dark text-white m-2" (click)="downloadFile()">CSV</button>
   <button type="button" class="btn btn-dark" routerLink="/addDipendente/{{idaz}}">Aggiungi</button>
 </div>
