--- a/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
@@ -2,7 +2,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-<div class="container">
+<div class="">
   <!-- Page Heading -->
   <div  class="frontside">
   <p>Ricerca: </p>
@@ -136,7 +136,9 @@
     </div>
   </div>
 <!-- Team -->
+
 <section id="team" class="pb-5">
+
     <div class="container">
 
         <h5 class="section-title h1">LISTA AZIENDE</h5>
@@ -201,174 +203,3 @@
     </div>
     <button class="btn btn-primary" routerLink="addAzienda">Aggiungi Azienda</button>
 </section>
-<!-- Team -->
-
-
-
-
-
-
-
-
-<!-- ___________________________________________________________________________ -->
-
-
-
-
-
-
-
-<div class="container">
-  <!-- Page Heading -->
-  <h1 class="my-4">
-    Lista Aziende
-    <small></small>
-  </h1>
-  <!-- SearchBar -->
-  <nav class="navbar bg-light my-5 rounded-2">
-    <div class="container-fluid">
-      <a class="navbar-brand">Cerca Dipendente</a>
-      <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Inizia a digitare..."
-          aria-label="Cerca dipendente per nome"
-          #valoreDipendente
-          (input)="searchDipendente(valoreDipendente)"
-        />
-        <button
-          class="btn btn-outline-dark"
-          (click)="searchDipendente(valoreDipendente)"
-        >
-          Cerca!
-        </button>
-      </form>
-    </div>
-  </nav>
-  <!-- Search Results -->
-
-  <div class="alert alert-warning alert-dismissible fade show" *ngIf="errore" role="alert">
-    <strong>Attenzione!</strong> La ricerca non ha prodotto risultati.
-    <button type="button" class="btn-close" data-bs-dismiss="alert" (click)="chiudi()"></button>
-  </div>
-  <div *ngIf="is_display" >
-    <h2 class="text-dark">Dipendenti</h2>
-    <div>
-      <table class="table">
-        <thead class="bg-dark text-white">
-          <tr>
-            <th scope="col">Cognome dipendente</th>
-            <th scope="col">Nome dipendente</th>
-            <th scope="col">Matricola</th>
-            <th scope="col">Contratto</th>
-            <th scope="col">Assunzione</th>
-
-          </tr>
-        </thead>
-        <tbody>
-          <tr
-            style="cursor: pointer"
-            *ngFor="let d of dipendente$ | async"
-            routerLink="aziendaDetails/{{ d.id_azienda }}"
-          >
-            <th>{{ d.cognome }}</th>
-            <td>{{ d.nome }}</td>
-            <td>{{ d.matricola }}
-            <!-- <td *ngIf = "d.id_tipo_contratto as '198ef11d-cf73-4245-8469-2ddfa9979acf'; else elseBlock">Indeterminato</td>
-            <ng-template #elseBlock> Determinato</ng-template> -->
-            <td>{{d.nome_tipo_contratto}}</td>
-            <td>{{ d.data_inizio_rapporto }}</td>
-
-          </tr>
-        </tbody>
-      </table>
-      <br />
-    </div>
-  </div>
-
-  <!-- SearchBar Clienti -->
-  <nav class="navbar bg-light my-5 rounded-2">
-    <div class="container-fluid">
-      <a class="navbar-brand">Cerca Cliente</a>
-      <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Inizia a digitare..."
-          aria-label="Cerca cliente"
-          #valoreCliente
-          (input)="searchCliente(valoreCliente)"
-        />
-        <button
-          class="btn btn-outline-dark"
-          (click)="searchCliente(valoreCliente)"
-        >
-          Cerca!
-        </button>
-      </form>
-    </div>
-  </nav>
-
-  <!-- Search Results Clienti-->
-
-  <div class="alert alert-warning alert-dismissible fade show" *ngIf="errore2" role="alert">
-    <strong>Attenzione!</strong> La ricerca non ha prodotto risultati.
-    <button type="button" class="btn-close" data-bs-dismiss="alert" (click)="chiudi()"></button>
-  </div>
-  <div *ngIf="is_display2" >
-    <h2 class="text-dark">Clienti</h2>
-    <div>
-      <table class="table">
-        <thead class="bg-dark text-white">
-          <tr>
-            <th scope="col">Nome</th>
-            <th scope="col">Partita iva</th>
-            <th scope="col">Email</th>
-            <th scope="col">Telefono</th>
-
-          </tr>
-        </thead>
-        <tbody>
-          <tr
-            style="cursor: pointer"
-            *ngFor="let c of cliente$ | async"
-            routerLink="clienteCommessa/{{ c.id_cliente }}"
-          >
-            <th>{{ c.nome }}</th>
-            <td>{{ c.p_iva }}</td>
-            <td>{{ c.email }}
-            <!-- <td *ngIf = "d.id_tipo_contratto as '198ef11d-cf73-4245-8469-2ddfa9979acf'; else elseBlock">Indeterminato</td>
-            <ng-template #elseBlock> Determinato</ng-template> -->
-            <td>{{ c.telefono }}</td>
-
-          </tr>
-        </tbody>
-      </table>
-      <br />
-    </div>
-  </div>
-
-  <!-- Project One -->
-  <div class="row" *ngFor="let e of aziende | async">
-    <div class="col-md-7">
-      <a href="#">
-        <img class="img-fluid rounded mb-3 mb-md-0" src="{{ image }}" alt="" />
-      </a>
-    </div>
-    <div class="col md-5">
-      <h3>{{ e.nome }}</h3>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium
-        veniam exercitationem expedita laborum at voluptate. Labore, voluptates
-        totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque
-        eveniet unde.
-      </p>
-      
-    </div>
-  </div>
-  <!-- /.row -->
-
-  <hr />
-  <button class="btn btn-dark" routerLink="addAzienda">Aggiungi Azienda</button>
-</div> 
