--- a/Angular-Front/src/app/AziendaEnviroments/azienda-details/azienda-details.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda-details/azienda-details.component.html
@@ -33,8 +33,8 @@
   </table><br>
   <div>
     <button class="btn btn-dark m-2" routerLink="/">Home</button>
-    <button class="btn btn-dark m-2" routerLink="/aziendaUpdate/{{a.id_azienda}}">Modifica</button>
-    <button class="btn btn-dark m-2" (click)="deleteAzienda(a.id_azienda)" routerLink="/">Elimina</button>
+    <button class="btn btn-dark m-2" routerLink="/aziendaUpdate/{{a.id_azienda}}" *ngIf="permissions">Modifica</button>
+    <button class="btn btn-dark m-2" (click)="deleteAzienda(a.id_azienda)" routerLink="/" *ngIf="permissions">Elimina</button>
   </div>
 </div>
 
