--- a/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
@@ -58,7 +58,7 @@
   <!-- Search Results -->
 
   <div
-    class="alert alert-warning alert-dismissible fade show"
+    class="container p-3 mb-5 alert alert-warning alert-dismissible fade show"
     *ngIf="errore"
     role="alert"
   >
